fix(Button): use truncated label

--- a/packages/core/css/_button.css
+++ b/packages/core/css/_button.css
@@ -11,7 +11,7 @@
     @apply align-middle m-1 relative inline-block select-none max-w-full print:hidden;
 
     & .ax-button__label {
-      @apply z-10;
+      @apply z-10 truncate;
       line-height: 1.2;
     }
 
